// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render apply icon class 1`] = `
<button
  className="button ripple button--icon  mko_xh0n1r-button  mko_xh0n1r-button_icon"
  icon="T"
  type="button"
/>
`;

exports[`should render apply link class 1`] = `
<button
  className="button ripple button--link  mko_xh0n1r-button  mko_xh0n1r-button_link"
  type="button"
/>
`;

exports[`should render apply size class 1`] = `
<button
  className="button ripple button--standard button--small  mko_xh0n1r-button  mko_xh0n1r-button_standard"
  type="button"
/>
`;

exports[`should render apply style class 1`] = `
<button
  className="button ripple button--standard button--primary  mko_xh0n1r-button  mko_xh0n1r-button_standard"
  type="button"
/>
`;

exports[`should render when no props 1`] = `
<button
  className="button ripple button--standard  mko_xh0n1r-button  mko_xh0n1r-button_standard"
  type="button"
/>
`;
